--- a/202102-headless-chrome/README.adoc
+++ b/202102-headless-chrome/README.adoc
@@ -1,3 +1,11 @@
 = Headless chrome example
 
 Rendering PDF from an javascript-heavy HTML page by driving headless Chrome from a ring server.
+
+todo
+
+set up web server
+  reloaded - why not restarting
+  serve out files
+set up caching
+generate html page - with stripped in vega
