--- a/202102-react-table/src/main/opengb/spork/README.adoc
+++ b/202102-react-table/src/main/opengb/spork/README.adoc
@@ -10,6 +10,30 @@
 - inspired by react-table and d3, which provide useful generalized functions
   around data but leave the DOM representation entirely up to you.
 
+glossary + big concepts
+
+the big idea is that we have columns and rows as first-class structures, and
+what we toss into making a datagrid should require minimal processing.
+we supply some minimal columns as maps
+we supply data as either:
+a) a seq of sequentials (ie. a vector of floats, like what you'd get from a CSV) or
+b) a seq of maps
+
+a "datagrid" refers to this headless data structure ... a big nested map
+here with no UI dependencies.
+
+a "table" refers to an HTML table UI (or something similar like nested divs)
+
+"data" is raw rows (vector of x or map k:x) supplied by user
+
+a "raw column" is supplied by a user and is supplemented by make-datagrid-inst
+
+header, row, cell are vended by the table instance and are model objects
+with properties to help with display via hiccup (eg. props, render fns that
+generate hiccup)
+
+a "header" is the th equivalent of a td "cell" and acts similarly (meant for UI)
+
 == example
 
 [source,clojure]
